Fixed issue with delete button in profile manager not showing correct background color.

--- a/src/app/profile-editor/profile-editor.component.scss
+++ b/src/app/profile-editor/profile-editor.component.scss
@@ -24,12 +24,13 @@
         }
 
         .delete {
+            background-color: $warn;
             margin-right: 15px;
             color: #fff;
-        }
 
-        [ng-reflect-disabled="false"] {
-            background-color: $warn;
+            &[disabled="true"] {
+                background-color: #cbcbcb;
+            }
         }
 
         mat-icon {
